--- a/TriadApp/templates/TriadApp/index.html
+++ b/TriadApp/templates/TriadApp/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1>Hello from TriadApp!</h1>
+    <a href="{%url 'admin'%}">admin</a><br>
+    <a href="{%url 'superadmin'%}">superadmin</a><br>
+
+
+    <a href="{%url 'login'%}">login</a>
+
 </body>
 </html>
         
