--- a/TriadApp/templates/TriadApp/superadmin/super_admin.html
+++ b/TriadApp/templates/TriadApp/superadmin/super_admin.html
@@ -22,7 +22,7 @@
                             <a href="{% url 'admin' %}" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Dashboard</a>
                         </li>
                         <li>
-                            <a href="{% url 'create_admin' %}" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Add Admin</a>
+                            <a href="#" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Add Admin</a>
                         </li>
                         <li>
                             <a href="#" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Orders</a>
