--- a/TriadApp/templates/TriadApp/index.html
+++ b/TriadApp/templates/TriadApp/index.html
@@ -12,7 +12,7 @@
     <a href="{%url 'superadmin'%}">superadmin</a><br>
 
 
-    <a href="{%url 'login'%}">login</a>
+    <a href="{%url 'superadmin_login'%}">login</a>
 
 </body>
 </html>
