--- a/TriadApp/templates/TriadApp/superadmin/super_admin.html
+++ b/TriadApp/templates/TriadApp/superadmin/super_admin.html
@@ -25,7 +25,7 @@
                             <a href="{% url 'add_stall' %}" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Add Stall</a>
                         </li>
                         <li>
-                            <a href="#" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Orders</a>
+                            <a href="{% url 'register_admin' %}" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Register Admin</a>
                         </li>
                         <li>
                             <a href="#" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Reports</a>
