stall crud no design

--- a/TriadApp/templates/TriadApp/index.html
+++ b/TriadApp/templates/TriadApp/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Hello from TriadApp!</h1>
     <a href="{%url 'admin'%}">admin</a><br>
-    <a href="{%url 'superadmin'%}">superadmin</a><br>
+    <a href="{%url 'super_admin'%}">superadmin</a><br>
 
 
     <a href="{%url 'superadmin_login'%}">login</a>
