--- a/TriadApp/templates/TriadApp/superadmin/super_admin.html
+++ b/TriadApp/templates/TriadApp/superadmin/super_admin.html
@@ -19,7 +19,7 @@
                 <nav class="mt-6">
                     <ul>
                         <li>
-                            <a href="{% url 'admin' %}" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Dashboard</a>
+                            <a href="{% url 'super_admin' %}" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Dashboard</a>
                         </li>
                         <li>
                             <a href="{% url 'add_stall' %}" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Add Stall</a>
