--- a/TriadApp/templates/TriadApp/superadmin/super_admin.html
+++ b/TriadApp/templates/TriadApp/superadmin/super_admin.html
@@ -22,10 +22,10 @@
                             <a href="{% url 'super_admin' %}" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Dashboard</a>
                         </li>
                         <li>
-                            <a href="{% url 'add_stall' %}" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Add Stall</a>
+                            <a href="{% url 'add_stall' %}" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Stall Management</a>
                         </li>
                         <li>
-                            <a href="{% url 'register_admin' %}" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Register Admin</a>
+                            <a href="{% url 'register_admin' %}" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Admin Management</a>
                         </li>
                         <li>
                             <a href="#" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Reports</a>
